tdf#160590 Disable Metal with Intel HD Graphics 6000

Releasing a Metal buffer resource hangs when fetching pixels from a
Skia surface on this Intel MacBook Air built-in GPU.

Change-Id: Ic3028bf8eb45ebb9f6d71879bf5d96f0401a95c8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165927
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
(cherry picked from commit fe3a4bdf48f7b2d4f6da31b4392ac5979653cf9c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165946
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Patrick Luby <guibomacdev@gmail.com>